refactor to consistenly use property name "propertyname" instead of "property"

--- a/src/modals/array.ejs
+++ b/src/modals/array.ejs
@@ -27,7 +27,7 @@
                     autocomplete="off"
                     class="form-control form-control-sm entity-property"
                     id="property.rows.<%= row.id %>"
-                    data-property="rows"
+                    data-propertyname="rows"
                     data-row-id="<%= row.id %>"
                     value="<%= row.string %>">
                 </div>
