--- a/src/modals/citation.ejs
+++ b/src/modals/citation.ejs
@@ -20,7 +20,7 @@
             <label for="summernote-citation">Citation</label>
             <div class="summernote summernote-citation"
               id="summernote.citation"
-              data-property="citation"><%- citation %></div>
+              data-propertyname="citation"><%- citation %></div>
           </div>
         </form>
       </div>
