--- a/src/modals/framework.ejs
+++ b/src/modals/framework.ejs
@@ -1,8 +1,9 @@
 <%
   const rec = locals.rec || {};
+  const propertyName = locals.propertyName || 'text';
   const id = rec.id || '';
   const label = rec.label || '';
-  const text = rec.text || '';
+  const text = rec[propertyName];
 %>
 <div class="modal fade" id="modal" tabindex="-1" role="dialog" aria-labelledby="modal-title" aria-hidden="true">
   <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
@@ -18,7 +19,7 @@
           <div
             class="summernote summernote-text"
             id="summernote.text"
-            data-property="text"><%- text %></div>
+            data-propertyname="<%= propertyName %>"><%- text %></div>
         </form>
       </div>
       <div class="modal-footer">
