--- a/src/modals/partnership-jurisdiction-list.ejs
+++ b/src/modals/partnership-jurisdiction-list.ejs
@@ -27,7 +27,7 @@
                 <% if(jurisdiction.isMember) { %>checked=""<% } %>
                 value="<%= jurisdiction.slug %>"
                 id="property.jurisdictions.items.<%= jurisdiction.slug %>"
-                data-property="jurisdictions"
+                data-propertyname="jurisdictions"
                 data-item="<%= jurisdiction.slug %>"
               </input>
               <%= jurisdiction.name %>
