--- a/src/modals/string.ejs
+++ b/src/modals/string.ejs
@@ -31,7 +31,7 @@
               class="form-control entity-property"
               placeholder="Enter <%= label %>"
               id="property.string"
-              data-property="<%= propertyName %>"
+              data-propertyname="<%= propertyBaseName %>"
               value="<%= string %>">
           </div>
         </form>
