--- a/src/modals/text.ejs
+++ b/src/modals/text.ejs
@@ -21,7 +21,7 @@
       </div>
       <div class="modal-body">
         <form autocomplete="off" spellcheck="false" class="submission" data-id="<%= id %>">
-          <div class="summernote summernote-text"  id="summernote.<%= propertyName %>" data-propertyname="<%= propertyName %>"><%- text %></div>
+          <div class="summernote summernote-text"  id="summernote.<%= propertyBaseName %>" data-propertyname="<%= propertyBaseName %>"><%- text %></div>
         </form>
       </div>
       <div class="modal-footer">
