--- a/src/modals/value.ejs
+++ b/src/modals/value.ejs
@@ -30,7 +30,7 @@
               class="form-control entity-property"
               placeholder="Enter amount (number only)"
               id="property.string"
-              data-property="string"
+              data-propertyname="string"
               value="<%= string %>">
           </div>
           <div class="form-group">
@@ -43,7 +43,7 @@
               placeholder="Enter currency (if applicable)"
               <%= currencyDisabled %>
               id="property.currency"
-              data-property="currency"
+              data-propertyname="currency"
               value="<%= currency %>">
           </div>
           <div class="form-group">
@@ -56,7 +56,7 @@
               placeholder="Enter year or year range (if applicable)"
               <%= yearDisabled %>
               id="property.year"
-              data-property="year"
+              data-propertyname="year"
               value="<%= year %>">
           </div>
         </form>
