--- a/src/modals/contact.ejs
+++ b/src/modals/contact.ejs
@@ -29,7 +29,7 @@
               class="form-control entity-property"
               placeholder="Enter first name"
               id="property.firstName"
-              data-property="firstName"
+              data-propertyname="firstName"
               value="<%= firstName %>">
           </div>
           <div class="form-group">
@@ -41,7 +41,7 @@
               class="form-control entity-property"
               placeholder="Enter last name"
               id="property.lastName"
-              data-property="lastName"
+              data-propertyname="lastName"
               value="<%= lastName %>">
           </div>
           <div class="form-group">
@@ -54,7 +54,7 @@
               placeholder="Enter email (representatives only)"
               <%= disabled %>
               id="property.email"
-              data-property="email"
+              data-propertyname="email"
               value="<%= email %>">
           </div>
           <div class="form-group">
@@ -67,7 +67,7 @@
               placeholder="Enter title (representatives only)"
               <%= disabled %>
               id="property.companyTitle"
-              data-property="companyTitle"
+              data-propertyname="companyTitle"
               value="<%= companyTitle %>">
           </div>
         </form>
